public/styles/site/_component-slideshow.scss
.slideshow-container {
	margin: -2.2em -0.75em -0 -0.75em;

	@media all and ( min-width: 655px ) {
		margin-top: 0.8em;
	}

	@media all and ( min-width: 660px ) {
		margin-top: -1.7em;
	}

	@media all and ( min-width: 765px ) {
		margin-top: -2.7em;
	}

	@media all and ( min-width: 800px ) {
		margin-top: -2em;
	}

	@media all and ( min-width: 850px ) {
		margin-top: -2.1em;
	}
}


/* TODO: make a best practice max-width for this 
	(so that it doesn't wrap onto more than 1 line at Desktop and 2 lines at mobile) */
/* TODO: make these clickable.... to the actual article */ 
.slideshow__description {
	bottom: 0;
	color: $description-text-color;
	cursor: pointer;
	font-weight: 600;
	left: 0.5em;
	padding: 20px;
	position: absolute;
	text-shadow: 0 2px 10px $gray;
	width: 75%;

	@media all and (min-width: 660px) {
		left: 0.75em;
		top: 50%;
	}

	@media all and (min-width: 850px) {
		left: 1.5em;
		top: 30%;
		width: 60%;
	}
}

.slideshow__header {
	font-size: 1.6875em; /* 27px */
	margin-bottom: 10px;

	@media all and (min-width: 660px) {
		font-size: 1.875em; /* 30px */
	}

	@media all and (min-width: 850px) {
		font-size: 2.25em; /* 36px */
	}
}

.slideshow__tagline {
	font-size: 1.125em; /* 18px */
	margin-left: 1.5em;
	margin-bottom: 10px;

	@media all and (min-width: 660px) {
		font-size: 1.3125em; /* 21px */
	}

	@media all and (min-width: 850px) {
		font-size: 1.6875em; /* 27px */
	}
}

/* TODO: remove this component in lieu of the tagline */
.slideshow__learn-more {
	display: none;
	// font-size: 1em;
	// font-weight: 400;
	// margin-left: 1.75em;
}

